<resources>
    <string name="app_name">eBooks</string>
    <string name="connect_with_google">Connect with Google</string>


    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="mylibray">My Library</string>
    <string name="setting">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_your_con">Check your connection</string>
    <string name="latest">Latest</string>
    <string name="author">Author</string>
    <string name="download">Download</string>
    <string name="profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="favorite">Favorite</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phoneno">Phone No</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="already">Already have an account yet?</string>


    <string name="remember">Remember Me</string>
    <string name="skip">Skip</string>
    <string name="forgetpassword">Forget Your Password?</string>
    <string name="have_an_account">Don\'t Have an Account?</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="this_is_my_book_app">This is my book app</string>
    <string name="android_e_book">ANDROID E-BOOK</string>

    <string name="pushnotification">Enable Push Notification</string>
    <string name="about">About Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="moreapp">More App</string>
    <string name="shareapp">Share App</string>
    <string name="rateapp">Rate App</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_passoword">New Passoword</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_profile">Update Profile</string>
</resources>
