<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signupbg"
        android:fitsSystemWindows="true"
        android:id="@+id/login_root_layout"
        tools:context=".ui.activities.LoginActivity">


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_margin="35dp">


        <com.kinfoitsolutions.ebooks.ui.customviews.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"/>

        <com.drivingschool.android.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"/>


    </LinearLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:focusableInTouchMode="true"
                  android:focusable="false"
                  android:layout_centerInParent="true"
                  android:layout_margin="20dp">

        <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user"
                android:drawableTint="@color/white"
                android:hint="@string/email"
                android:backgroundTint="@color/white"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightwhite"/>

        <EditText
                android:id="@+id/edPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_pass"
                android:drawableTint="@color/white"
                android:hint="@string/password"
                android:backgroundTint="@color/white"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightwhite"/>


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp">

            <com.kinfoitsolutions.ebooks.ui.customviews.RegularTextView
                    android:id="@+id/btnLogin"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:textSize="@dimen/_13sdp"
                    android:background="@drawable/rounded_layout_sky"/>


            <com.kinfoitsolutions.ebooks.ui.customviews.RegularTextView
                    android:id="@+id/btnSkip"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/skip"
                    android:padding="10dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp"
                    android:background="@drawable/rounded_layout_sky"/>


        </LinearLayout>

        <com.kinfoitsolutions.ebooks.ui.customviews.RegularTextView
                android:id="@+id/forgotPsw"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgetpassword"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="@dimen/_15sdp"/>

    </LinearLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:layout_centerHorizontal="true"
                  android:layout_margin="20dp"
                  android:layout_alignParentBottom="true">


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.drivingschool.android.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/have_an_account"
                    android:textSize="@dimen/_13sdp"/>

            <com.kinfoitsolutions.ebooks.ui.customviews.RegularTextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp"/>
        </LinearLayout>


        <View android:layout_width="150dp"
              android:layout_height="3dp"
              android:layout_marginTop="10dp"
              android:background="@color/colorPrimary"/>

    </LinearLayout>



</RelativeLayout>