<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/signupbg"
                android:padding="@dimen/_30sdp"
                android:id="@+id/resetPswLayout"
                tools:context=".ui.activities.ResetPasswordActivity">


    <com.kinfoitsolutions.ebooks.ui.customviews.BoldTextView
            android:layout_width="wrap_content"
            android:text="@string/reset_password"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_centerInParent="true"
                  android:gravity="center">


        <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:textColor="@color/black"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="@dimen/_13sdp"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/white"
                android:background="@drawable/background_stroke"/>

        <EditText
                android:id="@+id/edNewPsw"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_passoword"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textSize="@dimen/_13sdp"
                android:padding="@dimen/_8sdp"
                android:backgroundTint="@color/white"
                android:singleLine="true"
                android:background="@drawable/background_stroke"/>


        <EditText
                android:id="@+id/edConfirmPsw"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:singleLine="true"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:backgroundTint="@color/white"
                android:background="@drawable/background_stroke"/>


    </LinearLayout>
    <Button
            android:id="@+id/btnSubmit"
            android:layout_gravity=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/rounded_layout_sky"
            android:text="@string/submit"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/white"
    />


</RelativeLayout>