<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/signupbg"
                tools:context=".ui.fragments.SettingsFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">


        <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp">

            <com.drivingschool.android.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pushnotification"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/white"/>


            <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="true"
                    android:id="@+id/reminder"/>

        </RelativeLayout>


        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/lightwhite"/>

        <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/aboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"/>


        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/lightwhite"/>

        <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/privacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"/>


        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/lightwhite"/>

        <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/shareApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shareapp"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"/>


        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/lightwhite"/>

        <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/rateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rateapp"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/lightwhite"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/lightwhite"/>

        <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"/>

        <View android:layout_width="match_parent"
              android:layout_height="0.5dp"
              android:background="@color/lightwhite"/>


    </LinearLayout>


</RelativeLayout>