<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signupbg"
        tools:context=".ui.activities.ForgetPasswordActivity">


    <com.kinfoitsolutions.ebooks.ui.customviews.BoldTextView
            android:layout_width="wrap_content"
            android:text="@string/forget_password"
            android:textSize="@dimen/_22sdp"
            android:textColor="@color/white"
            android:layout_margin="@dimen/_30sdp"
            android:layout_height="wrap_content"/>




    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_20sdp">


        <EditText
                android:id="@+id/edEmailFPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawableTint="@color/white"
                android:hint="@string/enter_your_email"
                android:backgroundTint="@color/white"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightwhite"
        />

        <com.kinfoitsolutions.ebooks.ui.customviews.RegularTextView
                android:id="@+id/btnSubmit"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:textSize="@dimen/_15sdp"
                android:background="@drawable/rounded_layout_sky"/>


    </LinearLayout>

</RelativeLayout>