<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signupbg"
        tools:context=".ui.fragments.ProfileFragment">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background"
            android:layout_margin="10dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="10dp"
                      android:focusableInTouchMode="true"
                      android:focusable="false"
                      android:gravity="center">


            <FrameLayout
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">


                <ImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_camera"
                        android:layout_gravity="bottom|right"/>



                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profilePic"
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="@dimen/_130sdp"
                        android:src="@drawable/ic_avatar"
                        android:layout_gravity="bottom|center_horizontal"/>
            </FrameLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/background_stroke"
                        android:maxLines="1"
                        android:textSize="@dimen/_15sdp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/background_stroke"
                        android:maxLines="1"
                        android:textSize="@dimen/_15sdp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phoneno"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/background_stroke"
                        android:maxLines="1"
                        android:textSize="@dimen/_15sdp"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </RelativeLayout>

</FrameLayout>